force-app/main/default/objects/CortexConfig__mdt/CortexConfig__mdt.object-meta.xml
<CustomObject>
    <label>Cortex Config</label>
    <pluralLabel>Cortex Configs</pluralLabel>
</CustomObject>