force-app/main/default/objects/CortexConfig__mdt/fields/ApiRateLimitPerHour__c.field-meta.xml
<CustomField>
    <fullName>ApiRateLimitPerHour__c</fullName>
    <label>API Rate Limit Per Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>