force-app/main/default/objects/CortexConfig__mdt/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>