force-app/main/default/objects/CortexConfig__mdt/fields/CacheTTLMinutes__c.field-meta.xml
<CustomField>
    <fullName>CacheTTLMinutes__c</fullName>
    <label>Cache TTL Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>