force-app/main/default/objects/CortexConfig__mdt/fields/ChurnRiskThreshold__c.field-meta.xml
<CustomField>
    <fullName>ChurnRiskThreshold__c</fullName>
    <label>Churn Risk Threshold</label>
    <precision>5</precision>
    <scale>4</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>