force-app/main/default/objects/CortexConfig__mdt/fields/DataRetentionDays__c.field-meta.xml
<CustomField>
    <fullName>DataRetentionDays__c</fullName>
    <label>Data Retention Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>