force-app/main/default/objects/CortexConfig__mdt/fields/EnableAuditLogging__c.field-meta.xml
<CustomField>
    <fullName>EnableAuditLogging__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Audit Logging</label>
    <type>Checkbox</type>
</CustomField>