force-app/main/default/objects/CortexConfig__mdt/fields/EnablePredictions__c.field-meta.xml
<CustomField>
    <fullName>EnablePredictions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Predictions</label>
    <type>Checkbox</type>
</CustomField>